[tool.poetry]
name = "repl-nix-ibmquantumqiskitreplit"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_ibmquantumqiskitreplit"}]

[tool.poetry.dependencies]
python = "^3.10"
sympy = "^1.13.1"
galois = "^0.4.1"
qiskit = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
